--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@apollo/gateway": "^2.5.6",
+    "@apollo/server": "^4.9.5",
+    "@nestjs/apollo": "^12.0.10",
     "@nestjs/common": "^10.2.8",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^8.0.0",
@@ -30,7 +31,6 @@
     "@nestjs/typeorm": "^10.0.0",
     "apollo-server-express": "^3.13.0",
     "graphql": "^16.8.1",
-    "graphql-tools": "^9.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
