--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-# Application
-APP_PORT=4000
-
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=survey
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=1234
